<resources>
    <string name="app_name">About Me</string>
    <string name="name">Alex</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
    <string name="bio">
After his retirement from the professional game, Higgins spent time playing for small sums of money in and around Northern Ireland. He made appearances in the 2005 and 2006 Irish Professional Championship, these comebacks ending in first-round defeats by Garry Hardiman and Joe Delaney, respectively.\n\n

On 12 June 2007, it was reported that Higgins had assaulted a referee at a charity match in the north-east of England.[25] Higgins returned to competitive action in September 2007 at the Irish Professional Championship in Dublin but was whitewashed 0-5 by former British Open champion Fergal O\'Brien in the first round at the Spawell Club, Templeogue.[26]\n\n

Higgins continued to play fairly regularly, and enjoyed "hustling" all comers for small-time stakes in clubs in Northern Ireland and beyond; in May 2009 he entered the Northern Ireland Amateur Championship, "to give it a crack",[27] but failed to appear for his match.[12]\n\n

On 8 April 2010, Higgins was part of the debut Snooker Legends Tour event in Sheffield, at the Crucible. Appearing alongside other retired or close-to-retiring professionals, including John Parrott, Jimmy White, John Virgo and Cliff Thorburn, he faced Thorburn in his match, but lost 2–0.[28]\n\n

It is estimated that Higgins earned and spent 3–4 million in his career as a snooker player.[29][30]
    </string>
</resources>
