<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    >

  <TextView
      android:id="@+id/name_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:textAlignment="center"
      style="@style/NameStyle" />

  <EditText
      android:id="@+id/nickname_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:textAlignment="center"
      android:hint="@string/what_is_your_nickname"
      style="@style/NameStyle"
      />

  <Button
      android:id="@+id/done_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/done"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/layout_margin"
      android:fontFamily="@font/roboto"
      style="@style/Widget.AppCompat.Button.Colored"
      />

  <ImageView
      android:id="@+id/star_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:srcCompat="@android:drawable/btn_star_big_on"
      android:contentDescription="@string/yellow_star"
      android:layout_marginTop="@dimen/layout_margin"
      />

  <TextView
      android:id="@+id/nickname_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:visibility="gone"
      style="@style/NameStyle"
      />

  <ScrollView
      android:id="@+id/bio_scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <TextView
        android:id="@+id/bio_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:lineSpacingMultiplier="1.2"
        style="@style/NameStyle"
        />


  </ScrollView>

</LinearLayout>
